@@ -1,0 +1,61 @@
+<?
+	include "include/config.inc";
+	$page["title"] = "Abbout Zabbix";
+	$page["file"] = "about.html";
+	show_header($page["title"],0);
+?>
+
+<?
+	show_table_header("Information about Zabbix");
+	echo "<br>";
+?>
+
+<?
+	show_table_header("Useful links");
+?>
+
+<TABLE BORDER=0 COLS=4 WIDTH="100%" BGCOLOR="#CCCCCC" cellspacing=1 cellpadding=3>
+<TR BGCOLOR=#EEEEEE>
+<TD ALIGN=LEFT>
+	<font face="Helvetica" size=+1><a href="http://zabbix.sourceforge.net">Homepage of Zabbix</a></font><br>
+</TD>
+<TD ALIGN=LEFT>
+	This is home page of Zabbix.
+</TD>
+</TR>
+<TR BGCOLOR=#DDDDDD>
+<TD ALIGN=LEFT>
+	<font face="Helvetica" size=+1><a href="http://zabbix.sourceforge.net">Downloads</a></font><br>
+</TD>
+<TD>
+	Latest Zabbix release can be found here.
+</TR>
+<TR BGCOLOR=#EEEEEE>
+<TD ALIGN=LEFT>
+	<font face="Helvetica" size=+1><a href="http://zabbix.sourceforge.net">Feature request</a></font><br>
+</TD>
+<TD>
+	If you need additional functionality, go here.
+</TD>
+</TR>
+<TR BGCOLOR=#DDDDDD>
+<TD ALIGN=LEFT>
+	<font face="Helvetica" size=+1><a href="http://zabbix.sourceforge.net">Bug reports</a></font><br>
+</TD>
+<TD>
+	Found bug ? Please, report it.
+</TD>
+</TR>
+<TR BGCOLOR=#EEEEEE>
+<TD ALIGN=LEFT>
+	<font face="Helvetica" size=+1><a href="http://zabbix.sourceforge.net">Mailing lists</a></font><br>
+</TD>
+<TD>
+	Very useful source of information.
+</TD>
+</TR>
+</TABLE>
+
+<?
+	show_footer();
+?>
